chore: silence Maven warnings, prune dead tests, fix proxy NPE